<resources>
    <string name="app_name">StoreManager</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Выйти</string>
    <string name="user_status">Статус</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="facebook_app_id">165070403956965</string>

    <!--GoogleSignInActivity-->

    <string name="signin_activity_label">Добро пожаловать!!</string>
    <string name="signin_activity_button">Войти</string>

    <!--AdminActivity-->
    <string name="admin_activity_label">Админ панель</string>

    <!--SummaryComposerActivity-->
    <string name="check_label">Check</string>
    <string name="label_send_data">Summary</string>
    <string name="table_number">№</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="num">Num</string>
    <string name="price">Price</string>
    <string name="table_bottom_total_text">Total:</string>
    <string name="send">Отправить!</string>
    <string name="send_new">Новый отчет</string>

    <!--AddItemsActivity-->
    <string name="label_add_item">Add item</string>

    <!--AddItemToListActivity-->
    <string name="manifest_label_add_shop">Добавить торговую точку</string>
    <string name="manifest_label_add_amount">Введите число</string>

    <!--AddBaseListsActivity-->
    <string name="manifest_label_add_base_ingredient_item">Добавить пункт</string>

    <!--AddItemToMenuActivity-->
    <string name="manifest_label_add_menu_item">Добавить элемент списка</string>
    <string name="add_menu_item_layout_button">ГОТОВО !</string>
    <string name="add_menu_item_layout_name">Наименование</string>
    <string name="add_menu_item_layout_price">Цена</string>
    <string name="add_menu_item_layout_size">Объем</string>
    <string name="add_menu_item_layout_ingredients">Ингридиенты</string>
    <string name="add_menu_item_layout_ingredient_button">Добавить</string>
    <string name="add_menu_item_layout_ingredient_list_label">Список ингридиентов:</string>

    <!--ListOfListActivity-->
    <string name="manifest_label_lists">Списки</string>
    <string name="lists_label">Редактируйте списки для компановки пунктов меню</string>
    <string name="lists_item_names">Наименования</string>
    <string name="lists_item_edit_button">Редактировать</string>
    <string name="lists_item_size">Объемы</string>
    <string name="lists_item_ingredient_name">Игридиенты</string>
    <string name="lists_item_ingredient_sizes">Обьемы ингридиентов</string>
    <string name="lists_item_ingredient_measures">Меры</string>

    <!--LisyOfListActivity constant-->
    <string name="item_names">item names</string>
    <string name="item_sizes">item sizes</string>
    <string name="item_ingredient_names">item ingredient names</string>
    <string name="item_ingredient_sizes">item ingredient sizes</string>
    <string name="item_ingredient_measure">item ingredient measure</string>

    <!--AddItemsToSummaryActivity???????????-->
    <string name="add_menu_item_label">Выберите пункт меню и введите количество</string>
    <string name="add_menu_item_add_button">Добавить</string>
    <string name="add_menu_item_selected_item">Пункт меню</string>
    <string name="add_item_to_summary_activity">Добавить в отчет</string>

    <!--MenuFragment-->
    <string name="menu_fragment_label">Создавайте и редактируйте Меню. Для удаления из списка - долгое нажатие</string>
    <string name="edit_lists_button">Редактировать списки</string>

    <!--AddMemberActivity-->
    <string name="add_member_label">Добавляйте людей в команду</string>
    <string name="add_member_button">Добавить</string>
    <string name="add_member_name_editview">Имя</string>
    <string name="add_member_email_editview">Емейл</string>
    <string name="add_member_status_editview">Статус</string>
    <string name="add_member_activity">Сотрудник</string>

    <!--AddItemToStoreActivity-->
    <string name="add_item_to_store_activity">Склад</string>

    <!--NewTeamNameActivity-->
    <string name="new_team_name_activity">Команда</string>

    <!--NoDataLayout-->
    <string name="no_data">Нет данных..</string>

    <!--AddItemsToShopStoreActivity-->
    <string name="add_item_to_shop_store_activity">Пополнить склад</string>
    <string name="add_item_to_shop_store_label">Выберите необходимые товары со склада</string>
    <string name="add_item_to_shop_store_add_button">Готово</string>
    <string name="add_item_to_shop_store_select_all">Выбрать все</string>

    <!--StatisticsActivity-->
    <string name="statistics_week">Неделя</string>
    <string name="statistics_month">Месяц</string>
    <string name="statistics_all">Все</string>
    <string name="statistics_activity">Статистика</string>

</resources>
