<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8099ddff"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_item_to_shop_store_label"
            android:gravity="center"
            android:textSize="@dimen/add_item_to_shop_store_label_text_size"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/add_item_to_shop_store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item_to_shop_store_add_button"
            android:layout_gravity="center"
            android:textSize="@dimen/add_item_to_shop_store_add_button_text_size"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>


        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_item_to_shop_store_select_all"
            android:layout_margin="@dimen/add_item_to_shop_store_select_all_checkbox_margin"/>

        <LinearLayout
            android:id="@+id/check_boxes_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/add_item_to_shop_store_checkboxes_layout_margin_left"
            android:layout_marginRight="@dimen/add_item_to_shop_store_checkboxes_layout_margin_right">



        </LinearLayout>
    </LinearLayout>
</LinearLayout>