<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/add_menu_item_layout_margin_left"
    android:layout_marginRight="@dimen/add_menu_item_layout_margin_right">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Формируйте пункты меню"
        android:layout_margin="@dimen/add_menu_item_layout_label_margin"
        android:gravity="center"/>

    <Button
        android:id="@+id/add_menu_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_menu_item_layout_button"
        android:theme="@style/ThemeOverlay.MyBigDarkButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_item_layout_name"
            android:textSize="@dimen/add_menu_item_layout_name_text_size"/>

        <Spinner
            android:id="@+id/menu_item_names_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_item_layout_price"
            android:textSize="@dimen/add_menu_item_layout_price_text_size"
            />

        <EditText
            android:id="@+id/menu_item_price_et"
            android:layout_width="@dimen/add_menu_item_layout_price_edittext_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_menu_item_layout_price_edittext_margin_left"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/menu_item_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_item_layout_size"
            android:textSize="@dimen/add_menu_item_layout_itemsize_text_size"/>

        <Spinner
            android:id="@+id/menu_item_size_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredient_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_item_layout_ingredients"
            android:textSize="@dimen/add_menu_item_layout_ingredients_text_size"
            android:layout_alignParentLeft="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/add_ingredient_item_button"
            android:layout_toRightOf="@+id/ingredient_label">

            <Spinner
                android:id="@+id/ingredients_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_menu_item_layout_ingredient_spinner_margin_left"
                android:layout_marginRight="@dimen/add_menu_item_layout_ingredient_spinner_margin_right"
                android:layout_weight="3">

            </Spinner>

            <Spinner
                android:id="@+id/ingredient_size_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_menu_item_layout_ingredient_size_spinner_margin_left"
                android:layout_marginRight="@dimen/add_menu_item_layout_ingredient_size_spinner_margin_right"
                android:layout_weight="2">

            </Spinner>

            <Spinner
                android:id="@+id/ingredient_measure_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/add_menu_item_layout_ingredient_measure_spinner_margin_left"
                android:layout_marginRight="@dimen/add_menu_item_layout_ingredient_measure_spinner_margin_right"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/add_ingredient_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_menu_item_layout_ingredient_button"
            android:layout_marginLeft="@dimen/add_menu_item_layout_ingredient_button_margin_left"
            android:layout_alignParentRight="true"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_menu_item_layout_ingredient_list_label"
        android:textSize="@dimen/add_menu_item_layout_ingredient_list_label_text_size"/>

    <ListView
        android:id="@+id/ingridient_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/add_menu_item_layout_ingredient_listview_margin_left"
        android:layout_marginRight="@dimen/add_menu_item_layout_ingredient_listview_margin_right"/>
</LinearLayout>